<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/round_white_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/black"
        android:textStyle="bold"

        android:layout_gravity="center"
        android:layout_marginTop="15dp"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/enter_your_email"
        android:textColorHint="@color/hint_text_color"
        app:hintTextColor="@color/black"

        app:errorIconTint="@android:color/holo_red_dark"
        app:boxStrokeErrorColor="@android:color/holo_red_dark"
        app:errorTextColor="@android:color/holo_red_dark"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/an_email_will_be_sent_which_will_contain_a_link_for_resetting_your_password"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:textColor="@android:color/darker_gray"
        android:textAlignment="center"

        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="25dp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"
        android:layout_marginHorizontal="15dp"

        android:text="@string/send_reset_link"
        android:textColor="@color/white"
        android:textStyle="bold"

        android:paddingVertical="12dp"

        android:layout_marginBottom="15dp"
        />

</LinearLayout>