<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".welcome.fragments.SignUpFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="Create an account"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"

            android:textColor="@color/black"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="start"
            android:layout_marginVertical="5dp"

            android:text="@string/enter_your_basic_details"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:layout_marginHorizontal="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:textColorHint="@color/hint_text_color"
                app:hintTextColor="@color/black"

                app:errorIconTint="@android:color/holo_red_dark"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                app:errorTextColor="@android:color/holo_red_dark"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapSentences"
                    android:textColor="@color/black"
                    android:maxLength="16"
                    android:nextFocusDown="@+id/last_name_et"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:textColorHint="@color/hint_text_color"
                app:hintTextColor="@color/black"
                android:layout_marginStart="5dp"
                app:errorIconTint="@android:color/holo_red_dark"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                app:errorTextColor="@android:color/holo_red_dark"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapSentences"
                    android:textColor="@color/black"
                    android:maxLength="16"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/enter_your_email"
            android:textColorHint="@color/hint_text_color"
            app:hintTextColor="@color/black"
            app:errorIconTint="@android:color/holo_red_dark"
            app:boxStrokeErrorColor="@android:color/holo_red_dark"
            app:errorTextColor="@android:color/holo_red_dark"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            android:hint="@string/create_new_password"
            android:textColorHint="@color/hint_text_color"
            app:hintTextColor="@color/black"
            app:passwordToggleTint="@color/hint_text_color"
            app:passwordToggleEnabled="true"
            app:errorIconTint="@android:color/holo_red_dark"
            app:boxStrokeErrorColor="@android:color/holo_red_dark"
            app:errorTextColor="@android:color/holo_red_dark"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:maxLength="16" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            android:hint="@string/confirm_your_password"
            android:textColorHint="@color/hint_text_color"
            app:hintTextColor="@color/black"
            app:passwordToggleTint="@color/hint_text_color"
            app:passwordToggleEnabled="true"
            app:errorIconTint="@android:color/holo_red_dark"
            app:boxStrokeErrorColor="@android:color/holo_red_dark"
            app:errorTextColor="@android:color/holo_red_dark"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:maxLength="16" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="20dp"
            android:paddingVertical="12dp"

            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"

            android:textColor="@color/white"

            android:textStyle="bold"

            app:rippleColor="@color/white"

            />

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="3dp"

            android:text="@string/already_have_an_account_sign_in"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"

            />

    </LinearLayout>

    <include android:id="@+id/progress"
        layout="@layout/progress_layout"/>

</RelativeLayout>