<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".parenthome.fragments.MapsFragment"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/geofence_fab"
        android:visibility="visible"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="25dp"
        app:fabSize="normal"
        app:tint="@color/white"
        app:srcCompat="@drawable/ic_add_geofence"
        app:backgroundTint="@color/my_color_primary"
        app:rippleColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/geofence"
        android:tooltipText="@string/add_a_geofence"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/search_txt"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="5dp"
        app:strokeColor="@color/my_color_primary"
        app:strokeWidth="1dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_search"
                app:tint="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/search_hint"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                android:textColor="@android:color/darker_gray"
                android:backgroundTint="@color/white"


                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bs_geofence"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        app:rippleColor="@android:color/transparent"
        app:strokeWidth="1dp"
        app:strokeColor="@color/black"
        app:cardElevation="3dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            >

            <ImageView
                android:id="@+id/close_bs_geofence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/ic_close"
                android:layout_gravity="end"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/geofence_radius"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"

                    android:text="0"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    />

                <TextView
                    android:id="@+id/geofence_rad"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"

                    android:text="0 Kms"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"

                    android:text="5"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                    android:textColor="@color/black"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="10dp"
                    />

            </LinearLayout>

            <SeekBar
                android:id="@+id/radius_seek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_geofence_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="15dp"
                android:text="@string/update_geofence"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:rippleColor="@android:color/darker_gray"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/long_press_on_map_to_change_the_center_of_the_geofence"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                android:textColor="@android:color/darker_gray"
                android:textAlignment="center"

                android:layout_marginTop="5dp"

                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <include android:id="@+id/progress"
        layout="@layout/progress_layout"/>

</RelativeLayout>